--- a/todo.text
+++ b/todo.text
@@ -2,5 +2,5 @@ nice to have:
 1. make a task that auto installs css bundler and bulma for new clones
 
 needed:
-3. register a new gmail account for mailer and deploy.
-4. Need to seed database when deploying.
+2. deploy.
+3. Need to seed database when deploying.
